# kareemmod

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: dependencies.cmake
core/: CMakeLists.txt  Console.cpp  Console.h  EacGuard.cpp  EacGuard.h  Logger.cpp  Logger.h  PluginManager.cpp  PluginManager.h  Renderer.cpp  Renderer.h  Services.cpp  Services.h  dllmain.cpp
docs/: BUILDING.md
injector/: CMakeLists.txt  main.cpp
plugins/example/: CMakeLists.txt  SpeedClockPlugin.cpp
sdk/: PluginSDK.h
